Added thumbnail for monocle project

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ keywords: design, portfolio, development, designer
                 </a>
               </div>
               <div class="large-6 medium-6 columns right-collapse">
-                <div class="portfolio-project-card square mb2">
+                <div class="portfolio-project-card square monocle-thumbnail mb2">
                 </div>
               </div>
             </div>
