Minor hover and navigation fixes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ keywords: design, portfolio, development, designer
     <a href="{{ site.url }}/about" class="primary quiet font-medium font-primary-color">KNOW MORE ABOUT ME</a>
   </div>
 </div>
-<section class="mt6">
+<section id="projects" class="mt6">
     <div class="row expanded mt5">
       <div class="full-width-background-light mt7 pb4">
         <div class="row">
