Set up basic blog structure

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -3,7 +3,7 @@ layout: default
 title: About
 description: This is my personal website. Welcome.
 permalink: '/about/'
-keywords: design, portfolio, development, designer
+keywords: anagh sharma, design, portfolio, development, designer
 ---
 
 <div class="row hero-row mt6">
