--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -8,12 +8,12 @@ keywords: blog, writing, design, portfolio, development, designer, experience
 
 <div class="row mt6 mb6">
     <div class="large-9 middle-6 small-12 columns divider pr3">
-        <hr class="font-secondary"/>
+        
             {% for post in site.posts limit:1 %}
                 <h6 class="f6 font-medium font-secondary mt4 mb1">LATEST ARTICLE / READ TIME - {{ post.read-time}}</h6>
-                <a href="https://medium.com/@AnaghSharma/the-power-of-side-projects-e6ba20826f69" class="heading f2 font-bold lh-title">{{ post.title }}</a>
+                <a href="{{ post.url }}" class="heading f2 font-bold lh-title">{{ post.title }}</a>
             {% endfor %}
-        <div class="mt5 mb3">
+        <div class="mt5">
           <h6 class="f6 font-medium font-secondary">ALL ARTICLES</h6>
         </div>
         <div class="row">
@@ -21,7 +21,7 @@ keywords: blog, writing, design, portfolio, development, designer, experience
             <ul class="no-bullet">
                 <li class="blog-list mv3 pt3 pb1 ph3">
                     <a href="{{ post.url }}" class="heading font-content font-secondary-bold f4 lh-title">{{ post.title }}</a>
-                    <p class="font-secondary f6 mt1">{{ post.date | date_to_long_string }}&emsp;|&emsp;READ TIME - {{ post.read-time }}</p>
+                    <p class="font-secondary f6 mt1">{{ post.date | date_to_long_string }}&emsp;/&emsp;Read Time - {{ post.read-time }}</p>
                 </li>
             </ul>
             {% endfor %}
