--- a/index.html
+++ b/index.html
@@ -166,20 +166,21 @@ keywords: design, portfolio, development, designer
       <div class="large-4 medium-4 columns">
         <a href="" class="heading">
           <hr class="font-secondary"/>
-          <p class="garage-post-header lh-title pr4">Building a native macOS Lyrics app</p>
+          <p class="f4 garage-post-header lh-title pr4">Building a native macOS Lyrics app using Musixmatch API</p>
         </a>
       </div>
       <div class="large-4 medium-4 columns">
         <a href="" class="heading">
           <hr class="font-secondary"/>
-          <p class="garage-post-header lh-title pr4">Switching to Jekyll and Github Pages for my personal website</p>
+          <p class="f4 garage-post-header lh-title pr4">Switching to Jekyll and Github Pages for my personal website</p>
         </a>
       </div>
       <div class="large-4 medium-4 columns">
         <a href="https://github.com/AnaghSharma/Ambar" class="heading">
           <hr class="font-secondary"/>
-          <p class="garage-post-header lh-title pr4">Building a macOS menu bar app with Xamarin and C#</p>
+          <p class="f4 garage-post-header lh-title pr4">Building a macOS menu bar app with Xamarin and C#</p>
         </a>
+      </div>
       </div>
     </div>
   </section>
