Updated behance hero image

--- a/_pages/projects/view-for-behance.html
+++ b/_pages/projects/view-for-behance.html
@@ -18,7 +18,7 @@ keywords: design, portfolio, development, designer
         <div class="row">
           <div class="columns">
             <a class="heading disabled">
-              <div class="portfolio-project-card horizontal-rect-12 identity-hero mb2">
+              <div class="portfolio-project-card horizontal-rect-12 behance-hero mb2">
               </div>
             </a>
           </div>
