Updated identity project

--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -40,21 +40,29 @@ keywords: design, portfolio, development, designer
                 <p class="text-justify font-dark lh-copy mt4">I started this project asking myself the obvious - Why? What are the problems that the project aims to solve? I listed down all the problems that I was having with the current system - <br><br>
                   <ol class="font-dark">
                     <li>Articulating who I am and what I do.
-                      <ul>
+                      <ul class="mt2 mb3">
                         <li>If one needs to know about who I am and what I do, then the information on the web that I have put is fragmented. On LinkedIn (a professional network) it says - Digital Product Designer, on Twitter (a social media) it says - Designing, Making, Playing. I needed a unique identity to show what I do - design and build, what I have designed, how I design, and so on.</li>
                       </ul>
                     </li>
                     <li>Conveying the message to right people.
-                      <ul>
+                      <ul class="mt2 mb3">
                         <li>An identity is also helpful in maintaining professionalism and conveying the right message to right audience. For designers - they might know me as a designer who also builds stuff. For developers - they might know me as someone who does part-time coding. For recruiters - they might know me as a designer who understands technical constraints behind a project.</li>
                       </ul>
                     </li>
                     <li>Showcasing my specialty - Design + Make
-                      <ul>
+                      <ul class="mt2 mb3">
                         <li>There are many platforms out there to show the designers’ work viz Behance, Dribbble. etc. They are essentially the same for everyone. I wanted to convey my philosophy of Designing and Building but found these platforms inadequate for the same.</li>
                       </ul>
                     </li>
                     <li>Distinguishing myself from competition in digital presence.</li>
+                  </ol>
+                </p>
+                <h5 class="font-dark font-secondary-bold font-content mt6">How</h5>
+                <p class="text-justify font-dark lh-copy mt4">In order to progress with this project, some questions needed to be answered - <br><br>
+                  <ol class="font-dark">
+                    <li>Who is the owner of this project?</li>
+                    <li>Who is my audience?</li>
+                    <li>What value am I bringing to the different types of audience?</li>
                   </ol>
                 </p>
             </div>
