Added story section in identity project

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ keywords: design, portfolio, development, designer
 </div>
 <section id="projects" class="mt6">
     <div class="row expanded mt5">
-      <div class="full-width-background-light mt7 pb4">
+      <div class="portfolio-background mt7 pb4">
         <div class="row">
           <div class="large-8 medium-8 small-12 columns left-collapse right-collapse">
             <div class="row">
