--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -28,9 +28,9 @@ keywords: design, portfolio, development, designer
                 <div class="content-table-bar" style="display: inline-block; height: 8rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
+                    <li class="pv1 font-dark">Story</li>
                     <li class="pv1 font-dark">Problem</li>
-                    <li class="pv1 font-dark">Research</li>
-                    <li class="pv1 font-dark">How</li>
+                    <li class="pv1 font-dark">Process</li>
                 </ul>
             </div>
             <div class="large-7 medium-7 end columns">
@@ -40,7 +40,7 @@ keywords: design, portfolio, development, designer
                 <h5 class="font-dark font-secondary-bold font-content mt6">Story</h5>
                 <p class="text-justify font-dark lh-copy mt4">I started working on this project in July 2015 but this project never took off with great enthusiasm. We all procrastinate, don't we? And one of the reasons behind this is the fear of failure. We do not want to fail and that is why we are afraid of trying things. Even if we do start a project, we want it to be perfect. As perfect as Utopia. I was not going anywhere with the project because I wanted the identity to be perfect right from the beginning. I did many iterations but did not publish or produce anything deliverable because I was never satisfied with any iteration. <br><br>Coming back to the project, the personal identity and the concept behind it. I named this project as <strong>/Project Home/</strong>. A /home/ is the place where we live. A place where people can find us, meet us and know who we are. Similarly, personal identity is loosely based on the same fact. For a digital product designer, the centre for the personal identity is the website, acting as the /Home/ . </p>
                 <h5 class="font-dark font-secondary-bold font-content mt6">Problem</h5>
-                <p class="text-justify font-dark lh-copy mt4">I started this project asking myself the obvious - Why? What are the problems that the project aims to solve? I listed down all the problems that I was having with the current system - <br><br>
+                <p class="text-justify font-dark lh-copy mt4">I started this project asking myself the obvious - Why? What are the problems that the project aims to solve? Jotted down all the problems that I thought needed some serious thinking - <br><br>
                   <ol class="font-dark">
                     <li>Articulating who I am and what I do.
                       <ul class="mt2 mb3">
@@ -61,12 +61,14 @@ keywords: design, portfolio, development, designer
                   </ol>
                 </p>
                 <h5 class="font-dark font-secondary-bold font-content mt6">How</h5>
-                <p class="text-justify font-dark lh-copy mt4">In order to progress with this project, some questions needed to be answered - <br><br>
+                <p class="text-justify font-dark lh-copy mt4">Starting a project out in the dark can be intimidating. Kickstarting can become easier once you answer these questions (not limited to) -<br><br>
                   <ol class="font-dark">
                     <li>Who is the owner of this project?</li>
                     <li>Who is my audience?</li>
                     <li>What value am I bringing to the different types of audience?</li>
                   </ol>
+                  <br>
+                  <span class="font-dark">The answers may be specific for some questions and subjective for others. The answer to these questions will lead you throughout the process.</span>
                 </p>
             </div>
         </div> 
