--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -25,7 +25,7 @@ keywords: design, portfolio, development, designer
         </div>
         <div class="row">
             <div class="large-3 medium-3 small-collapsed columns">
-                <div class="content-table-bar" style="display: inline-block; height: 8rem;"></div>
+                <div class="content-table-bar" style="display: inline-block; height: 8.25rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
                     <li class="pv1 font-dark">Story</li>
@@ -35,32 +35,32 @@ keywords: design, portfolio, development, designer
             </div>
             <div class="large-7 medium-7 end columns">
                 <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
-                <p class="text-justify font-dark lh-copy mt4">Personal identity revolves around building a unique identity around yourself. It is not limited to your social media profiles and certainly not to your logotype. Building a unique identity may provide a certain edge in the competition but altogether it depends on the philosophy you follow and the value it creates for the audience.<br><br> </p>
-                <img src="/assets/images/projects/identity-first.jpg"/>
-                <h5 class="font-dark font-secondary-bold font-content mt6">Story</h5>
-                <p class="text-justify font-dark lh-copy mt4">I started working on this project in July 2015 but this project never took off with great enthusiasm. We all procrastinate, don't we? And one of the reasons behind this is the fear of failure. We do not want to fail and that is why we are afraid of trying things. Even if we do start a project, we want it to be perfect. As perfect as Utopia. I was not going anywhere with the project because I wanted the identity to be perfect right from the beginning. I did many iterations but did not publish or produce anything deliverable because I was never satisfied with any iteration. <br><br>Coming back to the project, the personal identity and the concept behind it. I named this project as <strong>/Project Home/</strong>. A /home/ is the place where we live. A place where people can find us, meet us and know who we are. Similarly, personal identity is loosely based on the same fact. For a digital product designer, the centre for the personal identity is the website, acting as the /Home/ . </p>
-                <h5 class="font-dark font-secondary-bold font-content mt6">Problem</h5>
+                <p class="text-justify font-dark lh-copy mt4">Personal identity revolves around building a unique identity of yourself. It is not limited to your social media profiles and certainly not to your logotype. Building a unique identity may provide a certain edge in the competition but altogether it depends on the philosophy you follow and the value it creates for the audience.<br><br> </p>
+                <img src="/assets/images/projects/identity/cs-first.jpg"/>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Story</h5>
+                <p class="text-justify font-dark lh-copy mt4">I started working on this project in July 2015 but this project never took off with great enthusiasm. We all procrastinate, don't we? And one of the reasons behind this is the fear of failure. We do not want to fail and that is why we are afraid of trying things. Even if we do start a project, we want it to be perfect. As perfect as Utopia. I was not going anywhere with the project because I wanted the identity to be perfect right from the beginning. I did many iterations but did not publish or produce anything deliverable because I was never satisfied with any iteration. <br><br>Coming back to the project, the personal identity and the concept behind it. I named this project as <strong>/Project Home/</strong>. A home is the place where we live. A place where people can find us, meet us and know who we are. Similarly, personal identity is loosely based on the same fact. For a digital product designer, the centre for the personal identity is the website, acting as the Home. </p>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Problem</h5>
                 <p class="text-justify font-dark lh-copy mt4">I started this project asking myself the obvious - Why? What are the problems that the project aims to solve? Jotted down all the problems that I thought needed some serious thinking - <br><br>
                   <ol class="font-dark">
                     <li>Articulating who I am and what I do.
                       <ul class="mt2 mb3">
-                        <li>If one needs to know about who I am and what I do, then the information on the web that I have put is fragmented. On LinkedIn (a professional network) it says - Digital Product Designer, on Twitter (a social media) it says - Designing, Making, Playing. I needed a unique identity to show what I do - design and build, what I have designed, how I design, and so on.</li>
+                        <li class="text-justify">If one needs to know about who I am and what I do, then the information on the web that I have put is fragmented. On LinkedIn (a professional network) it says - Digital Product Designer, on Twitter (a social media) it says - Designing, Making, Playing. I needed a unique identity to show what I do - design and build, what I have designed, how I design, and so on.</li>
                       </ul>
                     </li>
                     <li>Conveying the message to right people.
                       <ul class="mt2 mb3">
-                        <li>An identity is also helpful in maintaining professionalism and conveying the right message to right audience. For designers - they might know me as a designer who also builds stuff. For developers - they might know me as someone who does part-time coding. For recruiters - they might know me as a designer who understands technical constraints behind a project.</li>
+                        <li class="text-justify">An identity is also helpful in maintaining professionalism and conveying the right message to right audience. For designers - they might know me as a designer who also builds stuff. For developers - they might know me as someone who does part-time coding. For recruiters - they might know me as a designer who understands technical constraints behind a project.</li>
                       </ul>
                     </li>
                     <li>Showcasing my specialty - Design + Make
                       <ul class="mt2 mb3">
-                        <li>There are many platforms out there to show the designers’ work viz Behance, Dribbble. etc. They are essentially the same for everyone. I wanted to convey my philosophy of Designing and Building but found these platforms inadequate for the same.</li>
+                        <li class="text-justify">There are many platforms out there to show the designers’ work viz Behance, Dribbble. etc. They are essentially the same for everyone. I wanted to convey my philosophy of Designing and Building but found these platforms inadequate for the same.</li>
                       </ul>
                     </li>
-                    <li>Distinguishing myself from competition in digital presence.</li>
+                    <li class="text-justify">Distinguishing myself from competition in digital presence.</li>
                   </ol>
                 </p>
-                <h5 class="font-dark font-secondary-bold font-content mt6">How</h5>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Process</h5>
                 <p class="text-justify font-dark lh-copy mt4">Starting a project out in the dark can be intimidating. Kickstarting can become easier once you answer these questions (not limited to) -<br><br>
                   <ol class="font-dark">
                     <li>Who is the owner of this project?</li>
@@ -70,6 +70,19 @@ keywords: design, portfolio, development, designer
                   <br>
                   <span class="font-dark">The answers may be specific for some questions and subjective for others. The answer to these questions will lead you throughout the process.</span>
                 </p>
+                <h6 class="font-dark font-medium mt5">Logotype</h6>
+                <p class="text-justify font-dark lh-copy mt3">I started sketching keeping the reference - <strong>/Home/</strong> in my mind. I wanted to take it into account while designing the components. Looking around in my home sparked a lot of ideas for shapes and patterns. <br><br>I did somewhere around 20 iterations of the logotype before finalising it - </p>
+                <img src="/assets/images/projects/identity/cs-second.jpg"/>
+                <img src="/assets/images/projects/identity/cs-third.jpg" class="mt3"/>
+                <h6 class="font-dark font-medium mt5">Colour</h6>
+                <p class="text-justify font-dark lh-copy mt3">Initially I picked the shades of Blue and Green for the identity which represent the colour of sky and earth (above and below the Home). But switched to a fiery red for the energy and passion it symbolises.</p>
+                <img src="/assets/images/projects/identity/cs-fourth.jpg"/>
+                <h6 class="font-dark font-medium mt5">Typeface</h6>
+                <p class="text-justify font-dark lh-copy mt3">Selecting a typeface for any project can be a tricky and time consuming process. I picked up Roboto as my primary typeface for it works good with Digital and Print Media. For the secondary typeface, I selected Playfair Display; a serif typeface. Another motive for selecting these typefaces is that these are free and a part of open source software. </p>
+                <img src="/assets/images/projects/identity/cs-fifth.jpg"/>
+                <h6 class="font-dark font-medium mt5">Other Components</h6>
+                <p class="text-justify font-dark lh-copy mt3"><a class="font-primary-color" href="{{ site.url }}">This website</a> has been designed and built keeping the different audience in mind. I have also used <strong>Patterns</strong> throughout the identity and website. I will design and build different components if something comes up in future.</p>
+                <h5 class="font-dark font-content font-secondary text-center mt5 mb4">That's all folks</h5>
             </div>
         </div> 
       </div>
