Added page for uber project

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@ keywords: design, portfolio, development, designer
         </div>
         <div class="row">
           <div class="columns small-collapse">
-            <div class="portfolio-project-card horizontal-rect-12 uber-thumbnail mb2">
-            </div>
+            <a href="{{ site.url }}/projects/uber" class="heading">
+              <div class="portfolio-project-card horizontal-rect-12 uber-thumbnail mb2">
+              </div>
+            </a>
           </div>
         </div> 
         <div class="row pb5">
