Added monocle project

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@ keywords: design, portfolio, development, designer
                 </a>
               </div>
               <div class="large-6 medium-6 columns right-collapse">
-                <div class="portfolio-project-card square monocle-thumbnail mb2">
-                </div>
+                <a href="{{ site.url }}/projects/monocle-giraffe" class="heading">
+                  <div class="portfolio-project-card square monocle-thumbnail mb2">
+                  </div>
+                </a>
               </div>
             </div>
           </div>
