Updated identity project copy

--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -2,14 +2,14 @@
 layout: default
 title: Personal Identity Project
 description: Branding Yourself
-permalink: '/projects/identity/'
+permalink: '/projects/personal-identity/'
 keywords: design, portfolio, development, designer
 ---
 
 <div class="row mt6">
   <div class="large-12 medium-12 small-12 columns mt6">
     <h1 class="font-light f1 text-center">Person<span class="font-primary-color">a</span>l Identity</h1>
-    <p class="text-center font-secondary">Branding your own self.</p>
+    <p class="text-center font-secondary">Brand yourself.</p>
   </div>
 </div>
 <section class="mt6">
@@ -35,7 +35,7 @@ keywords: design, portfolio, development, designer
             </div>
             <div class="large-7 medium-7 end columns">
                 <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
-                <p class="text-justify font-dark lh-copy mt4">Personal identity revolves around building a unique identity of yourself. It is not limited to your social media profiles and certainly not to your logotype. Building a unique identity may provide a certain edge in the competition but altogether it depends on the philosophy you follow and the value it creates for the audience.<br><br> </p>
+                <p class="text-justify font-dark lh-copy mt4">Personal identity revolves around building a unique identity of yourself. It is not limited to your social media profiles and certainly not to your logotype. Altogether it depends on the philosophy you follow and the value it creates for the audience. It tells a story about who you are and what you do.<br><br> </p>
                 <img src="/assets/images/projects/identity/cs-first.jpg"/>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Story</h5>
                 <p class="text-justify font-dark lh-copy mt4">I started working on this project in July 2015 but this project never took off with great enthusiasm. We all procrastinate, don't we? And one of the reasons behind this is the fear of failure. We do not want to fail and that is why we are afraid of trying things. Even if we do start a project, we want it to be perfect. As perfect as Utopia. I was not going anywhere with the project because I wanted the identity to be perfect right from the beginning. I did many iterations but did not publish or produce anything deliverable because I was never satisfied with any iteration. <br><br>Coming back to the project, the personal identity and the concept behind it. I named this project as <strong>/Project Home/</strong>. A home is the place where we live. A place where people can find us, meet us and know who we are. Similarly, personal identity is loosely based on the same fact. For a digital product designer, the centre for the personal identity is the website, acting as the Home. </p>
