--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ keywords: design, portfolio, development, designer
         <div class="row">
           <div class="large-8 medium-8 small-12 columns left-collapse right-collapse">
             <div class="row">
-              <a href="{{ site.url }}/projects/identity" class="heading">
+              <a href="{{ site.url }}/projects/personal-identity" class="heading">
                 <div class="portfolio-project-card horizontal-rect-8 identity-thumbnail mb2">
                 </div>
               </a>
