Updated XBOX design

--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -18,7 +18,7 @@ keywords: design, portfolio, development, designer
         <div class="row">
           <div class="columns">
             <a class="heading disabled">
-              <div class="portfolio-project-card horizontal-rect-12 identity-hero mb2">
+              <div class="portfolio-project-card horizontal-rect-12 xbox-hero mb2">
               </div>
             </a>
           </div>
@@ -41,7 +41,15 @@ keywords: design, portfolio, development, designer
                 <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
                 <p class="text-justify font-dark lh-copy mt4">In 2016, I bought an XBOX One and wanted to keep track of my games and achievements using the iPhone app. I found it too confusing to use and did a conceptual redesign from ground up to tackle the foundational flaws.</p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Problem</h5>
-                <p class="text-justify font-dark lh-copy mt4">The official XBOX app on iPhone has many flaws. I downloaded the app, signed in and landed on my feed. There were too many options on the screen. If you want to check your profile and achievements, good luck with that. Information Architecture, Layout and Visual Design appeared like a Windows 10 Mobile app. People on a particular platform such as iOS are familiar apps having designs somewhat according to the preset guidelines. They see and use the familiar design everyday in the default apps and apps that they have downloaded from the app store. And that is what they anticipate - familiarity and ease of use.<br><br>In iOS, most of the apps use Tabs in the bottom for organising the content beccause of their ease of use. Tabs are also easier to access being at the bottom of the screens. Those apps avoid having the hamburger menu which on the contrary the XBOX app is using. The moment you tap on the Hamburger Menu you find a plethora of superfluous options just to confuse you to some more extent. They have not placed only the secondary options there, they have put almost everything. Psychologically our short term memory can help us to remember 4-5 items at a time. So if you are using an iOS app even for the first couple of times, chances are high that you will roughly know ‘Where to find What’. That’s why Tabs feel far more better in organising content instead of hiding everything aimlessly in the Hamburger menu. <br><br>To summarise -</p>
+                <p class="text-justify font-dark lh-copy mt4">The official XBOX app on iPhone has many flaws. I downloaded the app, signed in and landed on my feed. There were too many options on the screen. If you want to check your profile and achievements, good luck with that. Information Architecture, Layout and Visual Design appeared like a Windows 10 Mobile app. People on a particular platform such as iOS are familiar with apps having designs somewhat according to the preset guidelines. They see and use the familiar design everyday in the default apps and apps that they have downloaded from the app store. And that is what they anticipate - familiarity and ease of use.<br><br>In iOS, most of the apps use Tabs in the bottom for organising the content because of their ease of use. Tabs are also easier to access being at the bottom of the screens. Those apps avoid having the hamburger menu which on the contrary the XBOX app is using. The moment you tap on the Hamburger Menu you find a plethora of superfluous options just to confuse you to some more extent. They have not placed only the secondary options there, they have put almost everything. Psychologically our short term memory can help us to remember 4-5 items at a time. So if you are using an iOS app even for the first couple of times, chances are high that you will roughly know ‘Where to find What’. That’s why Tabs feel far more better in organising content instead of hiding everything aimlessly in the Hamburger menu. <br><br>To summarise -
+                  <ol class="font-dark">
+                      <li>The information architecture is unbalanced and vague.</li>
+                      <li>Microsoft encouraged the design principle of "Do less with more" in Metro Design Language. Too much of the information is overwhelming in the app.</li>
+                      <li>The app experience is pretty much different than the console.</li>
+                      <li>The app does not take advantage of mobile platform to help tackle some console headaches like On-Screen typing and navigation.</li>
+                      <li>The app does not assist in tracking games.</li>
+                  </ol>
+                </p>
             </div>
         </div> 
       </div>
