Updated XBOX content

--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -50,6 +50,18 @@ keywords: design, portfolio, development, designer
                       <li>The app does not assist in tracking games.</li>
                   </ol>
                 </p>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Research</h5>
+                <p class="text-justify font-dark lh-copy mt4">For the research part, I decided to stick with competetive audit. I mostly looked at what is already there in iOS App Store and Google Play Store. Went through the reviews and to my surprise, there were a lot of people not content with the current app and its limitations. To summarise all that collectively -</p>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Ideas</h5>
+                <p class="text-justify font-dark lh-copy mt4">Solving the problems emerging out in the research phase, prioritisation of solution is required -
+                    <ol class="font-dark">
+                        <li>Virtual Controlling of the console.</li>
+                        <li>Better game tracking to aid in unlocking achievements.</li>
+                        <li>Ability to chat with friends.</li>
+                        <li>Buy apps and games right from the app.</li>
+                    </ol>
+                </p>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Information Architecture</h5>
             </div>
         </div> 
       </div>
