Updated uber project thumbnail

--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -31,7 +31,7 @@ keywords: design, portfolio, development, designer
                     <li class="pv1 font-dark">Problem</li>
                     <li class="pv1 font-dark">Research</li>
                     <li class="pv1 font-dark">Ideas</li>
-                    <li class="pv1 font-dark">Information Architecture</li>
+                    <li class="pv1 font-dark">IA</li>
                     <li class="pv1 font-dark">Wireframes</li>
                     <li class="pv1 font-dark">Visual Design</li>
                     <li class="pv1 font-dark">Learnings</li>
@@ -51,7 +51,7 @@ keywords: design, portfolio, development, designer
                   </ol>
                 </p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Research</h5>
-                <p class="text-justify font-dark lh-copy mt4">For the research part, I decided to stick with competetive audit. I mostly looked at what is already there in iOS App Store and Google Play Store. Went through the reviews and to my surprise, there were a lot of people not content with the current app and its limitations. To summarise all that collectively -</p>
+                <p class="text-justify font-dark lh-copy mt4">For the research part, I decided to stick with competitive audit. I mostly looked at what is already there in iOS App Store and Google Play Store. Went through the reviews and to my surprise, there were a lot of people not content with the current app and its limitations. To summarise all that collectively -</p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Ideas</h5>
                 <p class="text-justify font-dark lh-copy mt4">Solving the problems emerging out in the research phase, prioritisation of solution is required -
                     <ol class="font-dark">
@@ -62,6 +62,7 @@ keywords: design, portfolio, development, designer
                     </ol>
                 </p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Information Architecture</h5>
+                
             </div>
         </div> 
       </div>
