Removed refresh meta from 404 page

--- a/_pages/404.html
+++ b/_pages/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 keywords: anagh sharma, design, portfolio, development, designer
 ---
 
-<div class="row hero-row mt6">
+<div class="row hero-row mv6">
   <div class="large-8 small-12 columns mt5">
     <div class="horizontal-bar"></div>
     <h1 class="font-light">4<span class="font-primary-color">0</span>4</h1>
