Added store images placeholders

--- a/_pages/store.html
+++ b/_pages/store.html
@@ -13,3 +13,36 @@ keywords: anagh sharma, design, portfolio, development, designer
     <p class="mb5">Buy and download awesome stuff. Coming Soon.</p>
   </div>
 </div>
+<div class="row mt6 mb6">
+    <div class="row">
+        <div class="large-8 medium-8 small-12 columns">
+          <div class="row">
+            <div class="large-6 medium-6 small-12 columns left-collapse">
+              <a href="" class="heading">
+                <div class="placeholder square mb2">
+                </div>
+              </a>
+            </div>
+            <div class="large-6 medium-6 columns right-collapse">
+              <a href="" class="heading">
+                <div class="placeholder square mb2">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="row">
+            <a href="" class="heading">
+              <div class="placeholder horizontal-rect-8 mb2">
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="large-4 medium-4 columns small-collapse">
+          <a href="" class="heading">
+            <div class="placeholder vertical-rect mb2">
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+</div>
