Added the design room project

--- a/_pages/store.html
+++ b/_pages/store.html
@@ -2,7 +2,7 @@
 layout: default
 title: Store
 description: This is my personal website. Welcome.
-permalink: '/store'
+permalink: '/store/'
 keywords: anagh sharma, design, portfolio, development, designer
 ---
 
