Updated the design room intro

--- a/_pages/room.html
+++ b/_pages/room.html
@@ -7,9 +7,31 @@ keywords: anagh sharma, design, portfolio, development, designer
 ---
 
 <div class="row hero-row mv6">
-  <div class="large-8 small-12 columns mt5">
+  <div class="large-8 small-12 columns mt5 mb4">
     <div class="horizontal-bar"></div>
-    <h1 class="font-light">The Design Ro<span class="font-primary-color">o</span>m</h1>
-    <p class="mb5">A place for my experiments.</p>
+    <h1 class="font-light">The Design R<span class="font-primary-color">oo</span>m</h1>
+    <!-- <p class="mb5">A place for my experiments.</p> -->
+  </div>
+</div>
+<div class="row mt6">
+    <div class="large-4 medium-4 columns mt3">
+      <img src="/assets/images/the-room-hero.svg"></img>
+    </div>
+    <div class="large-6 large-offset-1 end medium-8 columns mt3">
+      <p class="room-text text-justify">The Design Room is the place where I experiment with designing things. The fun part is that when you are experimenting you do not have to put constraints on your process, the timeline and the deliverables. The objective of starting a project like this was to enhance my visual design skills. I have been receiving a lot of response on <a href="https://www.instagram.com/the.design.room/" target="_blank" class="font-primary-color">Instagram</a> lately and have been looking to improve this project since then.</p>
+    </div>
+</div>
+<div class="row mt6">
+  <h6 class="font-medium font-secondary ml1">Untitled 1 Project</h6>
+  <div class="row mt3">
+    <div class="large-4 medium-4 columns">
+        <p class="room-text text-justify">Music can be our biggest inspiration. This project is all about the wonderful and alluring lyrics. With every image, I try to visualise what is in the words.</p>
+    </div>
+    <div class="large-4 medium-4 columns">
+      
+    </div>
+    <div class="large-4 medium-4 columns">
+
+    </div>
   </div>
 </div>
