Updated the design room images

--- a/_pages/room.html
+++ b/_pages/room.html
@@ -28,10 +28,21 @@ keywords: anagh sharma, design, portfolio, development, designer
         <p class="room-text text-justify">Music can be our biggest inspiration. This project is all about the wonderful and alluring lyrics. With every image, I try to visualise what is in the words.</p>
     </div>
     <div class="large-4 medium-4 columns">
-      
+      <img height="300px" width="300px" src="/assets/images/the-design-room/001-cedarwood-road.jpg"/>
     </div>
     <div class="large-4 medium-4 columns">
-
+      <img height="300px" width="300px" src="/assets/images/the-design-room/002-polarize.jpg"/>
     </div>
+  </div>
+</div>
+<div class="row mt3">
+  <div class="large-4 medium-4 columns">
+    <img height="300px" width="300px" src="/assets/images/the-design-room/001-cedarwood-road.jpg"/>
+  </div>
+  <div class="large-4 medium-4 columns">
+    <img height="300px" width="300px" src="/assets/images/the-design-room/001-cedarwood-road.jpg"/>
+  </div>
+  <div class="large-4 medium-4 columns">
+    <img height="300px" width="300px" src="/assets/images/the-design-room/002-polarize.jpg"/>
   </div>
 </div>
