Updated the design room images

--- a/_pages/room.html
+++ b/_pages/room.html
@@ -25,24 +25,40 @@ keywords: anagh sharma, design, portfolio, development, designer
   <h6 class="font-medium font-secondary ml1">Untitled 1 Project</h6>
   <div class="row mt3">
     <div class="large-4 medium-4 columns">
-        <p class="room-text text-justify">Music can be our biggest inspiration. This project is all about the wonderful and alluring lyrics. With every image, I try to visualise what is in the words.</p>
+        <p class="room-text text-justify pr5">Music can be our biggest inspiration. This project is all about the wonderful and alluring lyrics. With every image, I try to visualise what is in the words.</p>
     </div>
     <div class="large-4 medium-4 columns">
-      <img height="300px" width="300px" src="/assets/images/the-design-room/001-cedarwood-road.jpg"/>
+      <img src="/assets/images/the-design-room/001-cedarwood-road.jpg"/>
     </div>
     <div class="large-4 medium-4 columns">
-      <img height="300px" width="300px" src="/assets/images/the-design-room/002-polarize.jpg"/>
+      <img src="/assets/images/the-design-room/002-polarize.jpg"/>
     </div>
   </div>
 </div>
-<div class="row mt3">
+<div class="row mt2">
   <div class="large-4 medium-4 columns">
-    <img height="300px" width="300px" src="/assets/images/the-design-room/001-cedarwood-road.jpg"/>
+    <img src="/assets/images/the-design-room/003-adventures-of-a-lifetime.jpg"/>
   </div>
   <div class="large-4 medium-4 columns">
-    <img height="300px" width="300px" src="/assets/images/the-design-room/001-cedarwood-road.jpg"/>
+    <img src="/assets/images/the-design-room/004-titanium.jpg"/>
   </div>
   <div class="large-4 medium-4 columns">
-    <img height="300px" width="300px" src="/assets/images/the-design-room/002-polarize.jpg"/>
+    <img src="/assets/images/the-design-room/005-song-for-someone.jpg"/>
   </div>
+</div>
+<div class="row mt2">
+    <div class="large-4 medium-4 columns small-collapse">
+      <img src="/assets/images/the-design-room/006-rap-god.jpg"/>
+    </div>
+    <div class="large-4 medium-4 columns">
+      <img src="/assets/images/the-design-room/007-every-tear-is-a-waterfall.jpg"/>
+    </div>
+    <div class="large-4 medium-4 columns">
+      <img src="/assets/images/the-design-room/008-scars-to-your-beautiful.jpg"/>
+    </div>
+</div>
+<div class="row mt2">
+    <div class="large-4 medium-4 columns">
+      <img src="/assets/images/the-design-room/009-love-the-way-you-lie.jpg"/>
+    </div>
 </div>
