--- a/_pages/room.html
+++ b/_pages/room.html
@@ -10,7 +10,6 @@ keywords: anagh sharma, design, portfolio, development, designer
   <div class="large-8 small-12 columns mt5 mb4">
     <div class="horizontal-bar"></div>
     <h1 class="font-light">The Design R<span class="font-primary-color">oo</span>m</h1>
-    <!-- <p class="mb5">A place for my experiments.</p> -->
   </div>
 </div>
 <div class="row mt6">
@@ -21,44 +20,49 @@ keywords: anagh sharma, design, portfolio, development, designer
       <p class="room-text text-justify">The Design Room is the place where I experiment with designing things. The fun part is that when you are experimenting you do not have to put constraints on your process, the timeline and the deliverables. The objective of starting a project like this was to enhance my visual design skills. I have been receiving a lot of response on <a href="https://www.instagram.com/the.design.room/" target="_blank" class="font-primary-color">Instagram</a> lately and have been looking to improve this project since then.</p>
     </div>
 </div>
+
 <div class="row mt6">
-  <h6 class="font-medium font-secondary ml1">Untitled 1 Project</h6>
-  <div class="row mt3">
-    <div class="large-4 medium-4 columns">
-        <p class="room-text text-justify pr5">Music can be our biggest inspiration. This project is all about the wonderful and alluring lyrics. With every image, I try to visualise what is in the words.</p>
-    </div>
-    <div class="large-4 medium-4 columns">
-      <img src="/assets/images/the-design-room/001-cedarwood-road.jpg"/>
-    </div>
-    <div class="large-4 medium-4 columns">
-      <img src="/assets/images/the-design-room/002-polarize.jpg"/>
-    </div>
+  <div class="columns">
+    <h6 class="font-medium font-secondary">Untitled 1 Project</h6>
   </div>
 </div>
-<div class="row mt2">
-  <div class="large-4 medium-4 columns">
+
+<div class="row mt3">
+  <div class="large-4 medium-4 columns pb2">
+    <p class="room-text text-justify pr5">Music can be our biggest inspiration. This project is all about the wonderful and alluring lyrics. With every image, I try to visualise what is in the words.</p>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/001-cedarwood-road.jpg"/>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/002-polarize.jpg"/>
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-4 medium-4 columns pb2">
     <img src="/assets/images/the-design-room/003-adventures-of-a-lifetime.jpg"/>
   </div>
-  <div class="large-4 medium-4 columns">
+  <div class="large-4 medium-4 columns pb2">
     <img src="/assets/images/the-design-room/004-titanium.jpg"/>
   </div>
-  <div class="large-4 medium-4 columns">
+  <div class="large-4 medium-4 columns pb2">
     <img src="/assets/images/the-design-room/005-song-for-someone.jpg"/>
   </div>
 </div>
-<div class="row mt2">
-    <div class="large-4 medium-4 columns small-collapse">
+<div class="row">
+    <div class="large-4 medium-4 columns pb2">
       <img src="/assets/images/the-design-room/006-rap-god.jpg"/>
     </div>
-    <div class="large-4 medium-4 columns">
+    <div class="large-4 medium-4 columns pb2">
       <img src="/assets/images/the-design-room/007-every-tear-is-a-waterfall.jpg"/>
     </div>
-    <div class="large-4 medium-4 columns">
+    <div class="large-4 medium-4 columns pb2">
       <img src="/assets/images/the-design-room/008-scars-to-your-beautiful.jpg"/>
     </div>
 </div>
-<div class="row mt2">
-    <div class="large-4 medium-4 columns">
+<div class="row mb6">
+    <div class="large-4 medium-4 columns pb2">
       <img src="/assets/images/the-design-room/009-love-the-way-you-lie.jpg"/>
     </div>
 </div>
