--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -53,7 +53,7 @@ keywords: design, portfolio, development, designer
                 <h5 class="font-dark font-secondary-bold font-content mt5">Research</h5>
                 <p class="text-justify font-dark lh-copy mt4">For the research part, I decided to stick with competitive audit. I mostly looked at what is already there in iOS App Store and Google Play Store. Went through the reviews and to my surprise, there were a lot of people not content with the current app and its limitations. To summarise all that collectively -</p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Ideas</h5>
-                <p class="text-justify font-dark lh-copy mt4">Solving the problems emerging out in the research phase, prioritisation of solution is required -
+                <p class="text-justify font-dark lh-copy mt4">To solve the problems emerging out in the research phase, prioritisation of solution is required -
                     <ol class="font-dark">
                         <li>Virtual Controlling of the console.</li>
                         <li>Better game tracking to aid in unlocking achievements.</li>
@@ -62,7 +62,16 @@ keywords: design, portfolio, development, designer
                     </ol>
                 </p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Information Architecture</h5>
-                
+                <p class="text-justify font-dark lh-copy mt4">In order to reduce confusion, I divided the whole app experience in 5 major entities viz - 
+                    <ol class="font-dark">
+                        <li><strong>Social Feed</strong> - Post Update, Your Activities, Friends' Activities, Updates from XBOX and Favorite Games.</li>
+                        <li><strong>Store</strong> - Buying apps and games, Redeem Code.</li>
+                        <li><strong>Connect</strong> - Connect the Console and Control it.</li>
+                        <li><strong>Achievements</strong> - Track games, achievements and hours played.</li>
+                        <li><strong>Profile</strong> - Personal Info, Message Friends.</li>
+                    </ol>
+                </p>
+                <img src="/assets/images/projects/xbox/cs-first.jpg" class="mt4"/>
             </div>
         </div> 
       </div>
