Updated XBOX project with images

--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -25,14 +25,12 @@ keywords: design, portfolio, development, designer
         </div>
         <div class="row">
             <div class="large-3 medium-3 small-collapsed columns">
-                <div class="content-table-bar" style="display: inline-block; height: 16.5rem;"></div>
+                <div class="content-table-bar" style="display: inline-block; height: 12.5 rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
                     <li class="pv1 font-dark">Problem</li>
-                    <li class="pv1 font-dark">Research</li>
                     <li class="pv1 font-dark">Ideas</li>
                     <li class="pv1 font-dark">IA</li>
-                    <li class="pv1 font-dark">Wireframes</li>
                     <li class="pv1 font-dark">Visual Design</li>
                     <li class="pv1 font-dark">Learnings</li>
                 </ul>
@@ -50,8 +48,6 @@ keywords: design, portfolio, development, designer
                       <li>The app does not assist in tracking games.</li>
                   </ol>
                 </p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Research</h5>
-                <p class="text-justify font-dark lh-copy mt4">For the research part, I decided to stick with competitive audit. I mostly looked at what is already there in iOS App Store and Google Play Store. Went through the reviews and to my surprise, there were a lot of people not content with the current app and its limitations. To summarise all that collectively -</p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Ideas</h5>
                 <p class="text-justify font-dark lh-copy mt4">To solve the problems emerging out in the research phase, prioritisation of solution is required -
                     <ol class="font-dark">
@@ -72,6 +68,8 @@ keywords: design, portfolio, development, designer
                     </ol>
                 </p>
                 <img src="/assets/images/projects/xbox/cs-first.jpg" class="mt4"/>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Visual Design</h5>
+                <img src="/assets/images/projects/xbox/cs-second.jpg" class="mt4"/>
             </div>
         </div> 
       </div>
