Updated the garage layout on homepage

--- a/index.html
+++ b/index.html
@@ -157,34 +157,27 @@ keywords: design, portfolio, development, designer
       <h6 class="text-center font-medium">THE GARAGE</h6>
       <div style="width: 113px;" class="section-heading-bar-dark"></div>
     </div>
-    <div class="row garage-background mt6">
-      <div class="large-7 medium-8 columns ph4 pv4">
-        <p class="text-justify mt3 pb4">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From the past couple of months, I have been getting serious with front-end development. </p>
-        <a href="" class="primary quiet font-medium font-primary-color">EXPLORE THE PROJECT</a>
-      </div>
-      <div class="large-3 medium-4 columns">
-        <img class="float-center mt5 pb5" src="/assets/images/the-garage-hero.svg"></img>
+    <div class="row ph1 mt5">
+      <div class="garage-background pv5">
+        <img class="float-center" src="/assets/images/the-garage-hero.svg"></img>
       </div>
     </div>
-    <div class="row mt5 pb5">
-      <div class="large-4 medium-4 columns">
-        <a href="" class="heading">
-          <hr class="font-secondary"/>
-          <p class="f4 garage-post-header lh-title pr4">Building a native macOS Lyrics app using Musixmatch API</p>
-        </a>
+    <div class="row mt5 mb6">
+      <div class="large-6 medium-6 columns">
+        <p class="text-justify mt3 pb5">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From the past couple of months, I have been getting serious with front-end development. </p>
+        <a href="{{ site.url }}/the-garage" class="primary quiet font-medium font-primary-color">EXPLORE THE PROJECT</a>
       </div>
       <div class="large-4 medium-4 columns">
-        <a href="" class="heading">
-          <hr class="font-secondary"/>
-          <p class="f4 garage-post-header lh-title pr4">Switching to Jekyll and Github Pages for my personal website</p>
-        </a>
-      </div>
-      <div class="large-4 medium-4 columns">
-        <a href="https://github.com/AnaghSharma/Ambar" class="heading">
-          <hr class="font-secondary"/>
-          <p class="f4 garage-post-header lh-title pr4">Building a macOS menu bar app with Xamarin and C#</p>
-        </a>
-      </div>
+          <h6 class="mt3 f6 font-bold font-secondary">LATEST COOKIES</h6>
+        <ul class="no-bullet">
+          <li class="blog-list mv3 pv2 ph3">
+            <a href="" class="heading font-content font-secondary-bold f5 lh-title">Building a native macOS Lyrics app using Musixmatch API</a>
+          </li>
+          <li class="blog-list mv3 pv2 ph3">
+            <a href="" class="heading font-content font-secondary-bold f5 lh-title">Switching to Jekyll and Github Pages for my personal website</a>
+          </li>
+        </ul>
       </div>
     </div>
-  </section>
+  </div>
+</section>
