--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ keywords: design, portfolio, development, designer
       </div>
     </div>
     <div class="row mt5 mb6">
-      <div class="large-6 medium-6 columns">
+      <div class="large-6 medium-6 columns mb5">
         <p class="text-justify mt3 pb5">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From the past couple of months, I have been getting serious with front-end development. </p>
         <a href="{{ site.url }}/the-garage" class="primary quiet font-medium font-primary-color">EXPLORE THE PROJECT</a>
       </div>
-      <div class="large-4 medium-4 columns">
+      <div class="large-4 medium-5 columns">
           <h6 class="mt3 f6 font-bold font-secondary">LATEST COOKIES</h6>
         <ul class="no-bullet">
           <li class="blog-list mv3 pv2 ph3">
